--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   provider: ^6.0.0
-  firebase_core: ^3.10.0
-  cloud_firestore: ^5.6.1
-  firebase_auth: ^5.4.0
-  firebase_storage: ^12.4.0
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
