--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,33 +1,3 @@
-# name: quiz_app
-# description: "A new Flutter project."
-
-# publish_to: 'none'
-
-# version: 1.0.0+1
-
-# environment:
-#   sdk: ^3.6.0
-
-# dependencies:
-#   flutter:
-#     sdk: flutter
-#   cupertino_icons: ^1.0.8
-#   provider: ^6.0.0
-#   firebase_core: ^3.10.0 # Update to the required version
-#   firebase_auth: ^5.4.0
-#   cloud_firestore: ^5.4.0
-
-# dev_dependencies:
-#   flutter_test:
-#     sdk: flutter
-#   flutter_lints: ^5.0.0
-
-# flutter:
-#   uses-material-design: true
-
-#   assets:
-#     - assets/images/quiz-logo.png
-
 name: quiz_app
 description: "A new Flutter project."
 
@@ -42,8 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  provider: ^6.0.0
   http: ^1.3.0
+  flutter_secure_storage: ^9.2.4
+  path_provider: ^2.0.11  # Adding path_provider dependency
 
 dev_dependencies:
   flutter_test:
